--- a/assets/style.css
+++ b/assets/style.css
@@ -98,7 +98,7 @@ nav a {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -253,7 +253,7 @@ input[type="submit"] {
 		margin-top: 0;
 		margin-bottom: 1em;
 	}
-	#about-me h5, #about-me p {
+	#about-me h3, #about-me p {
 		width: 100%;
 	}
 }
@@ -351,4 +351,3 @@ input[type="submit"] {
 		width: 80%;
 	}
 }
-
